--- a/Frontend/Web/main.html
+++ b/Frontend/Web/main.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
     <head>
         <title> Microblog </title>
         <meta charset="utf-8">
@@ -24,7 +24,6 @@
                 Text: {{ entry.text }}<br>
             </div>
         </div>
-
         <script type = "text/javascript" src="scripts/main.js"></script>
     </body>
 </html>
