--- a/Frontend/Web/index.html
+++ b/Frontend/Web/index.html
@@ -11,6 +11,7 @@
 
   <script type="text/javascript" src="lib/vue.js"></script>
   <script type="text/javascript" src="lib/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="scripts/user.js"></script>
 </head>
 
 <body style="background-color:lavender">
@@ -22,13 +23,14 @@
   <div id="nav"></div>
 
   <div class="tab-content" id="tabs">
-    <!--Home section-->
-    <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab"></div>
+    <!--Home tab-->
+    <div class="tab-pane show active" id="home" role="tabpanel" aria-labelledby="home-tab"></div>
 
-    <!--Profile section-->
-    <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab" v-if="logged"></div>
+    <!--Profile tab-->
+    <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab" v-if="user.logged"></div>
 
-    <div class="tab-pane fade" id="messages" role="tabpanel" aria-labelledby="messages-tab" v-if="logged"></div>
+    <!--Messages tab-->
+    <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab" v-if="user.logged"></div>
   </div>
 
   <!--Login modal-->
