--- a/Frontend/Web/index.html
+++ b/Frontend/Web/index.html
@@ -3,13 +3,15 @@
 
 <head>
   <title> AspTwitter </title>
+  <link rel="icon" href="logo.png">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+  <link rel="stylesheet"
+    href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
   <!--Scripts-->
   <script type="text/javascript" src="lib/vue.js"></script>
@@ -18,8 +20,9 @@
   <script type="text/javascript" src="scripts/models/entries.js"></script>
 
   <!--Templates-->
-  <script type="text/javascript" src="templates/tweetTemplate.js"></script>
-  <script type="text/javascript" src="templates/profileTemplate.js"></script>
+  <script type="text/javascript" src="templates/tweet-template.js"></script>
+  <script type="text/javascript" src="templates/profile-template.js"></script>
+  <script type="text/javascript" src="templates/user-info-template.js"></script>
 </head>
 
 <body style="background-color:lavender">
@@ -36,9 +39,6 @@
 
     <!--Explore tab-->
     <div class="tab-pane" id="explore" role="tabpanel" aria-labelledby="explore-tab"></div>
-
-    <!--Messages tab-->
-    <div class="tab-pane" id="messages" role="tabpanel" aria-labelledby="messages-tab" v-if="user.logged"></div>
 
     <!--Profile tab-->
     <div class="tab-pane" id="profile" role="tabpanel" aria-labelledby="profile-tab" v-if="user.logged"></div>
@@ -57,7 +57,6 @@
   <div class="modal fade" id="tweet" tabindex="-1"></div>
 
   <script>
-
     $(function () {
       $("#nav").load("components/nav.html", function () {
         $.getScript("scripts/nav.js");
