Fixed avatar uploading & Enter key behavior

--- a/Frontend/Web/index.html
+++ b/Frontend/Web/index.html
@@ -63,6 +63,8 @@
   <!--Tweet edit modal-->
   <div class="modal fade" id="edit-tweet" tabindex="-1"></div>
 
+  <input type="file" id="avatar-selector" accept="image/*" enctype="multipart/form-data" style="display: none;" onchange="uploadAvatar()">
+
   <script type="text/javascript" src="scripts/main.js"></script>
 </body>
 
