--- a/Frontend/Web-Vue/index.html
+++ b/Frontend/Web-Vue/index.html
@@ -16,18 +16,9 @@
   <!--Scripts-->
   <script type="text/javascript" src="lib/vue.js"></script>
   <script type="text/javascript" src="lib/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="api-key.js"></script>
   <script>
-    var apiKey;
-    var server;
-    $.ajax({
-      url: 'config.json',
-      dataType: 'json',
-      async: false,
-      success: function (config) {
-        apiKey = config.apiKey;
-        server = config.server;
-      }
-    });
+    var server = 'http://localhost:5000/';
   </script>
   <script type="text/javascript" src="scripts/models/user.js"></script>
   <script type="text/javascript" src="scripts/models/app-user.js"></script>
