--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,10 +14,10 @@
     href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
 
   <!--Scripts-->
-  <script type="text/javascript" src="lib/vue.js"></script>
-  <script type="text/javascript" src="lib/jquery-3.5.1.min.js"></script>
+  <script type="text/javascript" src="libs/vue.js"></script>
+  <script type="text/javascript" src="libs/jquery-3.5.1.min.js"></script>
   <script>
-    var server = 'http://localhost:5000/';
+    var server = 'https://asp-twitter.herokuapp.com/';
   </script>
   <script type="text/javascript" src="scripts/models/user.js"></script>
   <script type="text/javascript" src="scripts/models/app-user.js"></script>
