--- a/Frontend/wwwroot/index.html
+++ b/Frontend/wwwroot/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Frontend.styles.css" rel="stylesheet" />
+    <script src="app.js"></script>
 </head>
 
 <body class="bg-dark">
