--- a/Frontend/wwwroot/index.html
+++ b/Frontend/wwwroot/index.html
@@ -9,7 +9,8 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Frontend.styles.css" rel="stylesheet" />
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/jquery-3.5.1.min.js"></script>
 </head>
 
 <body class="bg-dark">
