Added Explore section

--- a/Frontend/wwwroot/index.html
+++ b/Frontend/wwwroot/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="bg-dark">
-    <div id="app" class="bg-dark">
+    <div id="app">
         <div class="d-flex justify-content-center mt-5">
             <div class="spinner-border mt-5" style="color: whitesmoke;" role="status"></div>
         </div>
